# openvm-kzg

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: tests.yml
crates/kzg/: Cargo.toml  build.rs
crates/kzg-rs/: Cargo.toml  build.rs
crates/kzg-rs/src/: kzg_proof.rs  lib.rs  main.rs  pairings.rs  types.rs
crates/kzg/src/: kzg_proof.rs  lib.rs  pairings.rs  path.rs  test_utils.rs  trusted_setup.rs  types.rs
examples/: Cargo.toml  verify_kzg.rs
examples/src/: main.rs
program/: Cargo.toml
program/src/: main.rs
programs/: Cargo.toml
src/: affine_point.rs  dtypes.rs  kzg_proof.rs  lib.rs  main.rs  openvm_host.rs  pairings.rs  program_inputs.rs  test_utils.rs  trusted_setup.rs  types.rs  utils.rs  wrappers.rs
tests/: Cargo.toml  integration_tests.rs  verify_kzg.rs
tests/openvm/programs/verify_kzg/: Cargo.toml
tests/openvm/programs/verify_kzg/src/: main.rs
tests/openvm/tests/: Cargo.toml
tests/openvm/tests/src/: lib.rs  setup.rs
tests/programs/verify_kzg/: Cargo.toml  openvm.toml
tests/programs/verify_kzg/src/: main.rs
tests/src/: lib.rs  setup.rs
