[package]
authors = ["Bhargav Annem <bhargav.annem@gmail.com>"]
description = "Rust implementation of KZG point evaluation"
edition = "2021"
license = "MIT"
name = "kzg-rs"
version = "0.2.3"
repository = "https://github.com/succinctlabs/kzg-rs"

[dependencies]
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false, features = [
    "bls12_381",
] }

hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
# bls12_381 = { version = "0.8.0", default-features = false, features = [
#     "groups",
#     "pairings",
#     "alloc",
# ] }
bls12_381 = { path = "../tmp/bls12_381", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
] }
sha2 = { version = "0.10.8", default-features = false }
ff = { version = "0.13.0", default-features = false, features = ["derive"] }
spin = { version = "0.9.8", default-features = false, features = ["once"] }

serde = { version = "1.0.200", default-features = false, features = [
    "alloc",
    "derive",
] }
serde-big-array = { version = "0.5.1", default-features = false }
serde_yaml = { version = "0.9", default-features = false, optional = true }
bincode = { version = "1.3.3", default-features = false, optional = true }

openvm-algebra-moduli-setup = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-ecc-sw-setup = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
hex-literal = "0.4.1"

[dev-dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false, features = [
    "parallel",
] }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false, features = [
    "parallel",
    "mimalloc",
    "test-utils",
] }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false, features = [
    "parallel",
] }
openvm-algebra-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-algebra-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-ecc-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-pairing-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-pairing-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false, features = [
    "parallel",
] }
openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", rev = "75f79da9da485c2091637207201fc40f0985ef14", default-features = false, features = [
    "parallel",
] }
num-bigint-dig = "0.8.4"
num-traits = "0.2.19"

[build-dependencies]
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false, features = [
    "bls12_381",
] }
# bls12_381 = { version = "0.8.0", default-features = false, features = [
#     "groups",
#     "pairings",
#     "alloc",
# ] }
bls12_381 = { path = "../tmp/bls12_381", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
] }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "2664f3075639f427ac9711926e84e97411f8e37f", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[features]
default = ["dep:serde_yaml", "dep:bincode"]
test = ["dep:serde_yaml", "dep:bincode"]
program-test = []
