[package]
name = "verify-kzg-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axvm = { path = "../../afs-prototype/crates/toolchain/axvm", default-features = false }
# axvm-platform = { path = "../../afs-prototype/crates/toolchain/platform", default-features = false }
ax-stark-backend = { path = "../../afs-prototype/crates/stark-backend", default-features = false }
kzg-rs = { path = "..", default-features = false }
serde = { version = "1.0.200", default-features = false, features = [
    "alloc",
    "derive",
] }
bls12_381 = { version = "0.8.0", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
] }

# [features]
# default = []
