[package]
name = "verify-kzg-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axvm = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "d9967c54b1ac528c794882feaf7919a085acd739", default-features = false }
axvm-platform = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "d9967c54b1ac528c794882feaf7919a085acd739", default-features = false }
axvm-pairing-guest = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "d9967c54b1ac528c794882feaf7919a085acd739", default-features = false }
axvm-algebra-guest = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "d9967c54b1ac528c794882feaf7919a085acd739", default-features = false }
axvm-algebra-moduli-setup = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "d9967c54b1ac528c794882feaf7919a085acd739", default-features = false }
axvm-algebra-complex-macros = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "d9967c54b1ac528c794882feaf7919a085acd739", default-features = false }
kzg-rs = { path = "..", default-features = false, features = ["program-test"] }
serde = { version = "1.0.200", default-features = false, features = [
    "alloc",
    "derive",
] }
bls12_381 = { version = "0.8.0", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
] }
