[package]
name = "verify-kzg-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axvm = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "9d14c1714f84e1b139c6e2818542d70cdaaaefaf", default-features = false }
axvm-platform = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "9d14c1714f84e1b139c6e2818542d70cdaaaefaf", default-features = false }
axvm-ecc-guest = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "9d14c1714f84e1b139c6e2818542d70cdaaaefaf", default-features = false }
axvm-pairing-guest = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "9d14c1714f84e1b139c6e2818542d70cdaaaefaf", default-features = false }
axvm-algebra-guest = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "9d14c1714f84e1b139c6e2818542d70cdaaaefaf", default-features = false }
axvm-ecc-sw-setup = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "9d14c1714f84e1b139c6e2818542d70cdaaaefaf", default-features = false }
axvm-algebra-moduli-setup = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "9d14c1714f84e1b139c6e2818542d70cdaaaefaf", default-features = false }
axvm-algebra-complex-macros = { git = "ssh://git@github.com/axiom-crypto/afs-prototype.git", rev = "9d14c1714f84e1b139c6e2818542d70cdaaaefaf", default-features = false }
kzg-rs = { path = "..", default-features = false, features = ["program-test"] }
serde = { version = "1.0.200", default-features = false, features = [
    "alloc",
    "derive",
] }
# bls12_381 = { version = "0.8.0", default-features = false, features = [
#     "groups",
#     "pairings",
#     "alloc",
# ] }
bls12_381 = { path = "../../tmp/bls12_381", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
] }
