[package]
name = "verify-kzg-program"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false }
openvm-platform = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false, features = [
    "bls12_381",
] }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false }
openvm-ecc-sw-setup = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false }
openvm-algebra-moduli-setup = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false }
openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false }

kzg-rs = { path = "..", default-features = false, features = ["guest-program"] }

# serde = { version = "1.0.200", default-features = false, features = [
#     "alloc",
#     "derive",
# ] }
# bls12_381 = { version = "0.8.0", default-features = false, features = [
#     "groups",
#     "pairings",
#     "alloc",
# ] }
# bls12_381 = { path = "../../tmp/bls12_381", default-features = false, features = [
#     "groups",
#     "pairings",
#     "alloc",
# ] }

[features]
default = []
guest-program = []
