[package]
name = "openvm-kzg-tests"
version.workspace = true
edition.workspace = true

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "51f07d50d20174b23091f48e25d9ea421b4e2787" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", rev = "51f07d50d20174b23091f48e25d9ea421b4e2787" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", rev = "51f07d50d20174b23091f48e25d9ea421b4e2787" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "51f07d50d20174b23091f48e25d9ea421b4e2787", features = [
    "parallel",
    "mimalloc",
    "test-utils",
] }
openvm-algebra-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "51f07d50d20174b23091f48e25d9ea421b4e2787" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51f07d50d20174b23091f48e25d9ea421b4e2787" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51f07d50d20174b23091f48e25d9ea421b4e2787" }
openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "51f07d50d20174b23091f48e25d9ea421b4e2787" }
openvm-pairing-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "51f07d50d20174b23091f48e25d9ea421b4e2787" }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51f07d50d20174b23091f48e25d9ea421b4e2787", features = [
    "bls12_381",
] }
openvm-kzg = { path = "../crates/kzg", features = ["test-utils"] }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", rev = "884f8e6aabf72bde00dc51f1f1121277bff73b1e" }

hex = { version = "0.4.3", features = ["alloc"] }
hex-literal = "0.4.1"
sha2 = { version = "0.10.8" }
ff = { version = "0.13.0", features = ["derive"] }
spin = { version = "0.9.8", features = ["once"] }

serde = { version = "1.0.200", features = ["alloc", "derive"] }
serde-big-array = { version = "0.5.1" }
serde_yaml = { version = "0.9" }
bincode = { version = "1.3.3" }
num-bigint = { version = "0.4.6" }
num-traits = { version = "0.2.19" }
