[package]
name = "openvm-kzg-tests"
version.workspace = true
edition.workspace = true

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "f0477ab8ee276bf102afb508cbb53a63efed9711" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", rev = "f0477ab8ee276bf102afb508cbb53a63efed9711" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", rev = "f0477ab8ee276bf102afb508cbb53a63efed9711" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "f0477ab8ee276bf102afb508cbb53a63efed9711", features = [
    "parallel",
    "test-utils",
] }
openvm-algebra-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "f0477ab8ee276bf102afb508cbb53a63efed9711" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "f0477ab8ee276bf102afb508cbb53a63efed9711" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "f0477ab8ee276bf102afb508cbb53a63efed9711" }
openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "f0477ab8ee276bf102afb508cbb53a63efed9711" }
openvm-pairing-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "f0477ab8ee276bf102afb508cbb53a63efed9711" }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "f0477ab8ee276bf102afb508cbb53a63efed9711", features = [
    "bls12_381",
] }
openvm-kzg = { path = "../crates/kzg", features = ["test-utils"] }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.1" }

hex = { version = "0.4.3", features = ["alloc"] }
hex-literal = "0.4.1"
sha2 = { version = "0.10.8" }
ff = { version = "0.13.0", features = ["derive"] }
spin = { version = "0.9.8", features = ["once"] }

serde = { version = "1.0.200", features = ["alloc", "derive"] }
serde-big-array = { version = "0.5.1" }
serde_yaml = { version = "0.9" }
bincode = { version = "1.3.3" }
num-bigint = { version = "0.4.6" }
num-traits = { version = "0.2.19" }
