[package]
authors = ["Bhargav Annem <bhargav.annem@gmail.com>"]
description = "Rust implementation of KZG point evaluation"
edition = "2021"
license = "MIT"
name = "kzg-rs"
version = "0.2.3"
repository = "https://github.com/succinctlabs/kzg-rs"

[dependencies]
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", optional = true }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", optional = true }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", optional = true, features = [
    "bls12_381",
] }

hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
bls12_381 = { version = "0.8.0", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
] }
sha2 = { version = "0.10.8", default-features = false }
ff = { version = "0.13.0", default-features = false, features = ["derive"] }
spin = { version = "0.9.8", default-features = false, features = ["once"] }
num-bigint-dig = { version = "0.8.4", default-features = false, optional = true }
num-traits = { version = "0.2.19", default-features = false, optional = true }

serde = { version = "1.0.200", default-features = false, features = [
    "alloc",
    "derive",
] }
serde-big-array = { version = "0.5.1", default-features = false }
serde_yaml = { version = "0.9", default-features = false, optional = true }
bincode = { version = "1.3.3", default-features = false, optional = true }

[build-dependencies]
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false, features = [
    "bls12_381",
] }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", default-features = false }
bls12_381 = { version = "0.8.0", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[features]
default = [
    "dep:serde_yaml",
    "dep:bincode",
    "dep:num-bigint-dig",
    "dep:num-traits",
    "openvm-guest",
]
guest-program = ["openvm-guest"]
openvm-guest = [
    "dep:openvm-algebra-guest",
    "dep:openvm-ecc-guest",
    "dep:openvm-pairing-guest",
]
