[package]
name = "kzg-rs-openvm-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", features = [
    "parallel",
    "mimalloc",
    "test-utils",
] }
openvm-algebra-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c" }
openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c" }
openvm-pairing-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c" }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "74fac04032b985e58d784da5224d9fdc46fca69c", features = [
    "bls12_381",
] }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v0.1.2-alpha" }

kzg-rs = { path = "../../../crates/kzg-rs" }

hex = { version = "0.4.3", features = ["alloc"] }
hex-literal = "0.4.1"
sha2 = { version = "0.10.8" }
ff = { version = "0.13.0", features = ["derive"] }
spin = { version = "0.9.8", features = ["once"] }

serde = { version = "1.0.200", features = ["alloc", "derive"] }
serde-big-array = { version = "0.5.1" }
serde_yaml = { version = "0.9" }
bincode = { version = "1.3.3" }
num-bigint-dig = { version = "0.8.4" }
num-traits = { version = "0.2.19" }
