[package]
name = "openvm-kzg-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414", features = ["parallel", "mimalloc", "test-utils"] }
openvm-algebra-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-pairing-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414", features = ["bls12_381"] }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", rev = "47a0bda" }

kzg-rs = { path = "../../../crates/kzg-rs" }

hex = { version = "0.4.3", features = ["alloc"] }
hex-literal = "0.4.1"
sha2 = { version = "0.10.8" }
ff = { version = "0.13.0", features = ["derive"] }
spin = { version = "0.9.8", features = ["once"] }

serde = { version = "1.0.200", features = ["alloc", "derive"] }
serde-big-array = { version = "0.5.1" }
serde_yaml = { version = "0.9" }
bincode = { version = "1.3.3" }
num-bigint-dig = { version = "0.8.4" }
num-traits = { version = "0.2.19" }
