[package]
name = "verify-kzg-program"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution" }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", features = [
    "bls12_381",
] }

openvm-kzg = { path = "../../..", default-features = false }

[features]
default = ["openvm-kzg/use-intrinsics"]
