[package]
name = "verify-kzg-program"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", features = [
    "bls12_381",
] }

openvm-kzg = { path = "../../..", default-features = false }

[features]
default = ["openvm-kzg/use-intrinsics"]
