[package]
name = "verify-kzg-program"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "main" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "main" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "main" }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", branch = "main", features = [
    "bls12_381",
] }

openvm-kzg = { path = "../../..", default-features = false }

[features]
default = ["openvm-kzg/use-intrinsics"]
