[workspace]
[package]
name = "verify-kzg-program"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-platform = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414", features = ["bls12_381"] }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-ecc-sw-setup = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-algebra-moduli-setup = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }
openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", rev = "1ad414" }

kzg-rs = { path = "../../../../crates/kzg-rs", default-features = false, features = ["guest-program"] }
